<resources>
    <string name="app_name" translatable="false">Cifras o letras</string>
    <string name="orderseq">Orden secuencial</string>
    <string name="orderand">Orden aleatorio</string>
    <string name="timelimit">Tiempo</string>
    <string name="begin">Comenzar</string>
    <string name="unit">Unidad</string>
    <string name="decade">Decena</string>
    <string name="next">Siguiente</string>
    <string name="vocal">Vocal</string>
    <string name="consonant">Consonante</string>
    <string name="translated"></string>
</resources>