<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical">


    <TextView
        android:id="@+id/timerLetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/holo_red_light"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/letrasText"/>



    <TextView
        android:id="@+id/letrasText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="TextView"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerLetText"
        app:layout_constraintBottom_toTopOf="@+id/buttonVocal"/>


    <Button
        android:id="@+id/buttonVocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocal"
        android:textColor="@color/buttontxt"
        android:textSize="24sp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLetNext"
        app:layout_constraintEnd_toStartOf="@+id/buttonCons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letrasText" />


    <Button
        android:id="@+id/buttonCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consonant"
        android:textColor="@color/buttontxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLetNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letrasText"
        app:layout_constraintStart_toEndOf="@+id/buttonVocal"/>


    <Button
        android:id="@+id/buttonLetNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/buttontxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVocal"/>


</androidx.constraintlayout.widget.ConstraintLayout>